Fix grid wrapping

--- a/src/app/components/game/grid/grid.styl
+++ b/src/app/components/game/grid/grid.styl
@@ -33,6 +33,9 @@
 				width: 300px + @padding * 2
 
 	&-items
+		display: flex
+		flex-wrap: wrap
+
 		@media $media-sm-up
 			margin-left: -($grid-gutter-width / 2)
 			margin-right: -($grid-gutter-width / 2)
@@ -54,6 +57,8 @@
 
 .scrollable-grid .game-grid
 	&-items
+		display: flex
+		flex-wrap: wrap
 		margin-left: 0
 		margin-right: 0
 
